fix: stop lines overflowing

--- a/src/assets/css/index.styl
+++ b/src/assets/css/index.styl
@@ -67,6 +67,9 @@ button:focus
 .table-responsive
   border: 0
 
+.wrap
+  word-break: break-all
+
 @media only screen and (max-width: 768px) 
   .container 
     width: 95%
@@ -74,4 +77,3 @@ button:focus
     width: 95%
   .wrap
     white-space: normal !important
-
